--- a/LoginPage.html
+++ b/LoginPage.html
@@ -26,9 +26,9 @@
                     <section class="inputfield">
 
                         <i class="fa-solid fa-user" style="color: #007bff;"></i>
-                        <input type="text" placeholder="Username" required minlength="4">
+                        <input type="text" placeholder="Username">
                         <i class="fa-solid fa-lock" style="color: #007bff;"></i>
-                        <input type="password" placeholder="Password" required minlength="8">
+                        <input type="password" placeholder="Password" >
                     </section>
                     <p>Forgot Password?</p>
                     <button type="submit">Login</button>
